fixed some layout bugs

--- a/full_stack_javascript/intermediate_html_css/sign_up_form/style.css
+++ b/full_stack_javascript/intermediate_html_css/sign_up_form/style.css
@@ -27,7 +27,6 @@ canvas {
   position: absolute;
   height: 100vh;
   width: 100vw;
-  z-index: -2;
 }
 
 section {
@@ -75,23 +74,27 @@ a:visited {
   background-position: center;
   display: flex;
   flex-direction: column;
-  font-size: 0.6rem;
+  font-size: 0.8rem;
   align-items: center;
   justify-content: end;
   width: 35vw;
-  z-index: -3;
+}
+
+#image-caption {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+  opacity: 0.5;
+  color: white;
+  margin-bottom: 20px;
+  z-index: 3;
 }
 
 .green {
   color: var(--light-green);
   font-weight: bolder;
-  font-size: 0.8rem;
-}
-
-#image-caption {
-  margin-bottom: 10px;
-  opacity: 0.5;
-  color: white;
+  font-size: 1rem;
 }
 
 #form-section {
@@ -123,6 +126,10 @@ a:visited {
   100% {
     opacity: 1;
   }
+}
+
+#image-caption {
+  margin-bottom: 25px;
 }
 
 #form-section #message h1::after {
@@ -175,6 +182,6 @@ input:focus {
     top: 100vh;
     height: 100vh;
     width: 100%;
-    opacity: 0.8;
+    opacity: 0.85;
   }
 }
